@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 f285775ec1bd082424097b79d2aa3e39 frown-0.6.ebuild 636
-MD5 219edbe10d8258651c0822af5b8c3d02 ChangeLog 339
+MD5 bda5fd9f9dd8ade45bd9026d9968a917 ChangeLog 474
+MD5 b0e7375971360e922527eab25f43c575 files/digest-frown-0.6.1 64
+MD5 21d08db40343e899174b75b9002b2527 frown-0.6.1.ebuild 644
 MD5 a769ecfcd1cdd2d40986627df7dfb249 metadata.xml 224
-MD5 938f89b847ade5d841b31b8595b917d6 files/digest-frown-0.6 62
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFDoC2LOKSBj1ObwosRAgQkAKCPPk87L0QCLRz1BN0SLMXJpwOPPQCff3of
-hQFYyZSu2T3xqmbJTJXpMRw=
-=mZZN
+iD8DBQFDumMHOKSBj1ObwosRAr1lAJ9wdWVWSTiG1w3Kgmy5DT723dR8qwCfeBu0
+m51qZyGs+1ypQW+XathAc5U=
+=uVoO
 -----END PGP SIGNATURE-----
