@@ -1,12 +1,12 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/frown/frown-0.6.ebuild,v 1.1 2005/12/14 14:29:02 kosmikus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/frown/frown-0.6.1.ebuild,v 1.1 2006/01/03 11:35:28 kosmikus Exp $
 
 inherit haskell-cabal
 
 DESCRIPTION="A parser generator for Haskell"
 HOMEPAGE="http://www.informatik.uni-bonn.de/~ralf/frown/"
-SRC_URI="http://www.informatik.uni-bonn.de/~ralf/${P}.tar.gz"
+SRC_URI="http://www.informatik.uni-bonn.de/~ralf/frown/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86"
