@@ -1,6 +1,12 @@
 # ChangeLog for dev-haskell/frown
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/frown/ChangeLog,v 1.1 2005/12/14 14:29:02 kosmikus Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/frown/ChangeLog,v 1.2 2006/01/03 11:35:28 kosmikus Exp $
+
+*frown-0.6.1 (03 Jan 2006)
+
+  03 Jan 2006; Andres Loeh <kosmikus@gentoo.org> -frown-0.6.ebuild,
+  +frown-0.6.1.ebuild:
+  New version.
 
 *frown-0.6 (14 Dec 2005)
 
